# redbot-update-wrapper

./: .gitignore  .pre-commit-config.yaml  Makefile  NOTICE  README.md  go.mod  hatch_build.py  pyproject.toml
.github/workflows/: build.yaml  publish_release.yaml
go/cmd/redbot-update/: main.go  main_unix.go  main_windows.go
go/internal/osutils/: osutils.go  osutils_unix.go  osutils_windows.go
go/internal/virtualenv/: virtualenv.go  virtualenv_unix.go  virtualenv_windows.go
python/redbot_update/: __init__.py  __main__.py
