[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redbot-update"
version = "0.1.0a3"
description = "Wrapper binary for performing Red-DiscordBot updates."
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Cog Creators" }]

[project.urls]
"Homepage" = "https://github.com/Cog-Creators/redbot-update-wrapper"
"Repository" = "https://github.com/Cog-Creators/redbot-update-wrapper"
"Main project" = "https://github.com/Cog-Creators/Red-DiscordBot"

[tool.hatch.build.targets.sdist]
# https://github.com/pypa/hatch/issues/304
include = [
    # Go code
    "go/",
    "go.mod",
    # Python code
    "python/",
    # Other files
    "Makefile",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["python/redbot_update"]

[tool.hatch.build.hooks.custom]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "go.mod" }, { file = "go/**/*" }]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
    # import sorting
    "I",
]

[tool.ruff.lint.isort]
combine-as-imports = true
